iOS 17.1 beta 2: ManagedMediaSource video playback stops when changing timestampOffset https://bugs.webkit.org/show_bug.cgi?id=262886 rdar://116707511

Reviewed by Eric Carlson.

We set MediaPlayerPrivateMediaSourceAVFObjC::m_playing to false if the video
playback stalled for whatever reason: a condition detected when the effective
playback rate became 0 and a notification was sent.
However, once we finished seeking or once a decoded data is available again
we would resume playback only if m_playback is true.
We need to resume playback if we used to play the video (that is play() was called
and the video wasn't explictly paused).

The change effectively revert changes made in 266665@main and 266675@main.

Adding test to catch future regressions.

* LayoutTests/media/media-source/media-managedmse-resume-after-stall-expected.txt: Added.
* LayoutTests/media/media-source/media-managedmse-resume-after-stall.html: Added.
* LayoutTests/platform/ios-16/TestExpectations:
* LayoutTests/platform/ipad/TestExpectations:
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::MediaPlayerPrivateMediaSourceAVFObjC):
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::playInternal):
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::pauseInternal):
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::shouldBePlaying const):

Canonical link: https://commits.webkit.org/269290@main